# artymd

./: .gitignore  EXAMPLE.md  README.md  index.html  install.ps1  install.sh  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  mermaid.rs
src/components/: DefaultAppPrompt.svelte  EditorContainer.svelte  FindBar.svelte  Header.svelte  PrintDialog.svelte  Sidebar.svelte  TabBar.svelte  ViewerContainer.svelte
src/lib/: file-actions.ts  file-watcher.ts  i18n.ts  mermaid-renderer.ts  print-pipeline.ts  renderer.ts
src/stores/: config.ts  content.ts  print.ts
winget/: artyfex.ArtyMD.installer.yaml  artyfex.ArtyMD.locale.en-US.yaml  artyfex.ArtyMD.yaml
