[package]
name = "artymd"
version = "0.1.0"
description = "A desktop Markdown editor with live preview, KaTeX, Mermaid, and syntax highlighting"
authors = ["Emiliano M. Silva <artyfex@gmail.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/emilianomsilva/artymd"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "artymd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
fs2 = "0.4"
libc = "0.2"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
